auth apis corrected
